--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.1.0",
+    "chalk": "^2.4.2",
     "clear": "^0.1.0",
     "junk": "^3.1.0",
     "shelljs": "^0.8.3"
