--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chalk": "^2.4.2",
     "clear": "^0.1.0",
     "junk": "^3.1.0",
+    "minimist": "^1.2.0",
     "shelljs": "^0.8.3"
   },
   "devDependencies": {
