--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "async": "^3.1.0",
     "chalk": "^2.4.2",
     "clear": "^0.1.0",
+    "get-audio-duration": "^1.0.0",
     "junk": "^3.1.0",
     "minimist": "^1.2.0",
-    "shelljs": "^0.8.3"
+    "shelljs": "^0.8.3",
+    "xml2json": "^0.11.2"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
