--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "junk": "^3.1.0",
     "minimist": "^1.2.0",
     "shelljs": "^0.8.3",
-    "xml2json": "^0.11.2"
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
