--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "chalk": "^2.4.2",
     "clear": "^0.1.0",
     "datauri": "^2.0.0",
-    "get-audio-duration": "^1.0.0",
+    "execa": "^3.3.0",
     "inquirer": "^7.0.0",
     "junk": "^3.1.0",
     "minimist": "^1.2.0",
