--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "execa": "^3.3.0",
     "inquirer": "^7.0.0",
     "junk": "^3.1.0",
+    "locate-chrome": "^0.1.1",
     "minimist": "^1.2.0",
     "progress": "^2.0.3",
     "puppeteer": "^2.0.0",
